Handing button callbacks

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -19,6 +19,7 @@
                 action: function(e) {
                   console.log(e);
                   console.log('cancel called');
+                  return false
                 }
               }
             }
