--- a/demo/demo.html
+++ b/demo/demo.html
@@ -70,19 +70,19 @@
 		    -moz-border-radius: 4px;
 		  }
 		  .swift input {
-		    background: rgba(255, 255, 255, 0.3); 
-		    border: 1px solid rgba(255, 255, 255, 0.2);
+		    background: rgba(255, 255, 255, 0.1); 
+		    border: 1px solid rgba(255, 255, 255, 0.15);
 		    outline: none;
 		    color: #fff;
 		    -webkit-border-radius: 4px;
 		    -moz-border-radius: 4px;
 		  }
 		  .swift input:hover {
-		    background: rgba(255, 255, 255, 0.5); 
+		    background: rgba(255, 255, 255, 0.2); 
 		    cursor: pointer;
 		  }
 		  .swift input:active {
-		    background: rgba(255, 255, 255, 0.2);
+		    background: #161616;
 		    color: #c7c7c7; 
 		  }
 		  .swift.east {
