--- a/demo/demo.html
+++ b/demo/demo.html
@@ -30,7 +30,9 @@
               'delete': {
                 label: 'Delete',
                 action: function(e) {
-                  e.target.parents('li').fadeOut()
+                  e.target.parents('li').fadeOut(function(){
+                    $(this).remove()
+                  })
                 }
               },
               'cancel': {
@@ -46,23 +48,33 @@
 		</script>
 		<style type="text/css" media="screen">
 		  body {
+		    font: 12px "Lucida Grande";
 		    padding: 80px;
 		  }
 		  ul {
-		    margin: 0;
+		    margin: 5px 0;
 		    padding: 0;
+		    width: 150px;
 		    list-style: none;
 		  }
+		  ul li {
+		    padding: 5px 10px;
+		    border-bottom: 1px solid #ddd;
+		  }
+		  ul li:last-child {
+		    border-bottom: none;
+		  }
 		  ul li a {
-		    padding: 0 5px;
+		    float: right;
 		    text-decoration: none;
+		    color: red;
 		  }
 		  .swift {
 		    margin-left: 20px;
 		  }
 		  .swift .wrapper {
-		    padding: 8px 5px 8px 15px;
-		    font: 12px "Lucida Grande";
+		    padding: 10px 5px 10px 15px;
+		    font: 11px "Lucida Grande";
 		    background: rgba(0,0,0,0.90);
 		    text-shadow: 1px 1px 1px #2C2C2C;
 		    color: #fff;
@@ -70,8 +82,11 @@
 		    -moz-border-radius: 4px;
 		  }
 		  .swift input {
+		    margin: 0 2px;
+		    padding: 4px 8px;
 		    background: rgba(255, 255, 255, 0.1); 
 		    border: 1px solid rgba(255, 255, 255, 0.15);
+		    font-size: 10px;
 		    outline: none;
 		    color: #fff;
 		    -webkit-border-radius: 4px;
@@ -92,7 +107,9 @@
 		</style>
 	</head>
 	<body>
-	  <ul></ul>
+	  <ul>
+	    <li>foobar<a href="#">x</a></li>
+	  </ul>
     <input type="button" value="Add Item" />
     
     <!-- <br />
