--- a/demo/demo.html
+++ b/demo/demo.html
@@ -108,7 +108,8 @@
 	</head>
 	<body>
 	  <ul>
-	    <li>foobar<a href="#">x</a></li>
+	    <li>foo<a href="#">x</a></li>
+	    <li>bar<a href="#">x</a></li>
 	  </ul>
     <input type="button" value="Add Item" />
     
