--- a/demo/demo.html
+++ b/demo/demo.html
@@ -129,7 +129,7 @@
 	</head>
 	<body>
 	  <h1>Swift</h1>
-	  <p>Swift is a tiny jQuery plugin which allows elegant, and user friendly inline dialogs for confirmations, prompts and more. Click "Add item" or one of the "x" links below to see it in action.</p>
+	  <p>Swift is a tiny jQuery plugin which allows elegant, and user friendly inline dialogs for confirmations, prompts and more. Click "Add item" or one of the "x" links below to see it in action. Currently tested in Safari, Firefox, and Chrome.</p>
 	  
 	  <h2>Demo</h2>
 	  <ul>
