--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-		<script src="../lib/jquery.swift.js"></script>
+		<script src="lib/jquery.swift.js"></script>
 		<script>
       $(function(){
         $('input[value=Add Item]').click(function() {
