--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<style type="text/css" media="screen">
 		  body {
 		    font: 12px "Lucida Grande", "Arial";
-		    padding: 80px;
+		    padding: 80px 100px;
 		  }
 		  h1, h2 {
 		    font-size: 30px;
