Removed console.log() call in demo

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
               },
               'cancel': {
                 label: 'Cancel',
-                action: function(e) {
-                  console.log('cancel called');
-                }
+                action: function(){}
               }
             }
           })
