Set the default action to hide the dialog

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -17,8 +17,7 @@
                 }
               },
               cancel: {
-                label: 'Cancel',
-                action: function(){}
+                label: 'Cancel'
               }
             }
           })
